--- a/tourPrj/src/main/webapp/css/p_base.css
+++ b/tourPrj/src/main/webapp/css/p_base.css
@@ -26,7 +26,7 @@
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
 blockquote, pre, a, abbr, acronym, address, big, cite, code, del, em, font, img, ins, q, s, small, strike, strong, sub, sup,
 dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, thead, tbody, tfoot, tr, th, td, input {
-    margin: 0; padding: 0; color:#2b2b2b;
+    margin: 0; padding: 0; color:#2b2b2b; vertical-align: baseline;
 }
 
 
@@ -40,6 +40,8 @@ caption {text-indent: -9999px; font-size: 0;}
 li {list-style: none;}
 table {width: 100%; table-layout: fixed; border-collapse: collapse;}
 a:link, a:visited, a:hover, a:active {text-decoration: none;}
+input{color:#666;}
+
 
 .sky_blue {
 	background: var(--point_color);
@@ -53,9 +55,10 @@ a:link, a:visited, a:hover, a:active {text-decoration: none;}
 .blind {position: absolute; left: -9999px; top: -9999px;}
 .skip {position: absolute; left: -9999px; top: -9999px;}
 
-body {font-family: 'Noto Sans KR', sans-serif; font-size: 16px;}
+html, body {font-family: 'Noto Sans KR', sans-serif; font-size: 16px; /* width:100%; overflow-x:hidden; */}
 button, textarea {font-family: 'Noto Sans KR', sans-serif;}
-button {cursor: pointer;}
+button {cursor: pointer; background: none;}
+
 
 
 /* 정렬 */
@@ -64,28 +67,48 @@ button {cursor: pointer;}
 
 .vat {vertical-align: top;}
 .vam {vertical-align: middle;}
+.txt_center{text-align: center;}
+.txt_right{text-align: right;}
+
+
 
 
 /* 가로길이 */
 .w_full {width: 100% !important;}
+.w_half {width: 50%;}
+.w_30per{width: 30%;}
 
 .w_quarter {width: 25% !important;}
 .w_20 {width: 20px !important;}
 .w_50 {width: 50px !important;}
-.w_80 {width: 80px !important;}
-.w_100 {width: 100px}
+.w_74 {    width: 100%;
+    max-width: 74px;}
+.w_80 {width: 80px;}
+.w_100 {width: 100px }
 .w_130 {width: 130px !important;}
+.w_140 {width: 140px !important;}
+
 .w_150 {width: 150px !important;}
+.w_160 {width: 160px !important;}
 .w_200 {width: 200px !important;}
 .w_250 {width: 250px !important;}
 .w_300 {width: 300px !important;}
 .w_350 {width: 350px !important;}
+.w_380 {width: 380px !important;}
 .w_500 {width: 500px !important;}
+.w_900 {width: 900px !important;}
+
 
 .h_30 {height: 30px !important;}
+.h_44 {height: 44px !important;}
+
 .h_80 {height: 80px !important;}
 .h_200 {height: 200px !important;}
 .h_400 {height: 400px !important;}
+
+
+.lh_30{line-height: 30px;}
+.lh_44{line-height: 44px;}
 
 
 /* 여백 */
@@ -97,6 +120,10 @@ button {cursor: pointer;}
 .mr10 {margin-right: 10px !important;}
 .mr15 {margin-right: 15px !important;}
 .mr20 {margin-right: 20px !important;}
+.mr24 {margin-right: 24px;}
+
+
+
 .mr30 {margin-right: 30px !important;}
 .ml5 {margin-left: 5px !important;}
 .ml10 {margin-left: 10px !important;}
@@ -104,3 +131,108 @@ button {cursor: pointer;}
 .ml20 {margin-left: 20px !important;}
 
 .pt20 {padding-top: 20px !important;}
+
+.pt24 {padding-top: 24px;}
+
+
+.mt8 {margin-top: 8px;}
+.mt16 {margin-top: 16px;}
+.mt24 {margin-top: 24px;}
+.mt32 {margin-top: 32px;}
+.mt64 {margin-top: 64px;}
+.mt100 {margin-top: 100px;}
+
+.mb8 {margin-bottom: 8px;}
+.mb16 {margin-bottom: 16px;}
+.mb24{margin-bottom: 24px;}
+.mb32{margin-bottom: 32px;}
+.mb40{margin-bottom: 40px;}
+.mb64{margin-bottom: 64px;}
+.mr56 {margin-right: 56px;}
+
+.ml24 {margin-left: 24px;}
+
+.mauto{margin:auto}
+
+
+.pl16 {padding-left: 16px;}
+.pl56 {padding-left: 56px;}
+
+
+
+.pl20 {padding-left: 20px;}
+.pr32 {padding-right: 32px;}
+
+.pr56 {padding-right: 56px;}
+
+.pb8 {padding-bottom: 8px;}
+.pb16{padding-bottom: 16px;}
+
+.padding16{padding: 16px;}
+
+
+
+/* 글자색 */
+.gray333{color: #333;}
+
+.gray666{color: #666;}
+
+.gray999{color: #999;}
+
+.point_color2{color: var(--point_color2);}
+
+
+/* 글자크기 */
+.font_size14{font-size: 14px;}
+.font_size16{font-size: 16px;}
+
+.font_size18{font-size: 18px;}
+.font_size20{font-size: 20px;}
+.font_size22{font-size: 22px;}
+.font_size24{font-size: 24px;}
+
+
+
+.font_wei500{font-weight:500;}
+
+
+/* 넓이 퍼센트 */
+.w30per{width:30%;}
+.w32per{width:32%;}
+.w56per{width:56%;}
+.w64per{width:64%;}
+
+
+
+/* 라인 */
+.border_t2{border-top: 2px solid var(--black_color)!important;}
+.border_t2b{border-top: 2px solid var(--sub_color)!important;}
+.line_border1{border-right: 1px solid var(--line_color)!important;}
+.line_border_b0{border-bottom: 0;}
+
+/* 상태 색상 */
+.BG_red {background:var(--red_color);}
+.BG_yellow {background:var(--yellow_color);}
+.BG_green {background:var(--green_color);}
+.BG_blue {background:var(--blue_color);}
+
+
+.c_red{color: var(--red_color);}
+.c_yellow{color: var(--yellow_color);}
+.c_green{color: var(--green_color);}
+.c_blue{color: var(--blue_color);}
+
+
+
+/* ir기법 */
+.p_blind{position:absolute;
+    	overflow:hidden;
+    	width:1px;
+    	height:1px;
+    	margin:-1px;
+    	clip:rect(0,0,0,0);
+}
+    	
+    	
+    	
+    	
