--- a/tourPrj/src/main/webapp/css/tour/tp/tpm/tpmModal.css
+++ b/tourPrj/src/main/webapp/css/tour/tp/tpm/tpmModal.css
@@ -1,6 +1,3 @@
-.ui-timepicker-container {
-    z-index: 99999;
-}
 .modal_content {
     display: none;
     position: fixed;
@@ -26,9 +23,12 @@
     background: rgba(0, 0, 0, 0.3);
     z-index: 9998;
 }
-.close_button {
-    float: right;
-    cursor: pointer;
+
+
+
+.popup .pop_inner{
+    width: 50% !important;
+    height: 80% !important;
 }
 .tour_item {
     border-bottom: 1px solid #ddd;
