--- a/tourPrj/src/main/webapp/resource/pub/css/map_layout.css
+++ b/tourPrj/src/main/webapp/resource/pub/css/map_layout.css
@@ -2,8 +2,8 @@
 @media (min-width: 768px) {
     #wrapper{width:100%;height:100%;}
     #MapArea{z-index:1; width:100%;height:100%;background:#ccc;}
-    #header {z-index:3;position:absolute;top:0;left:0;;width:100%;min-width:1280px;height:70px;background:#fff;z-index:10;transition:background-color 300ms , top 300ms ease;}
-    .header_tog {z-index:3;position:absolute;top:-80px !important;left:0;;width:100%;min-width:1280px;height:70px;background:#fff;z-index:10;transition:background-color 300ms , top 300ms ease;}
+    #header {z-index:3;position:absolute;top:0;left:0;;width:100%;/* min-width:1280px; */height:70px;background:#fff;z-index:10;transition:background-color 300ms , top 300ms ease;}
+    .header_tog {z-index:3;position:absolute;top:-80px !important;left:0;;width:100%;/* min-width:1280px; */height:70px;background:#fff;z-index:10;transition:background-color 300ms , top 300ms ease;}
 
     #header h1 {float: left;width: 235px;height: 41px;	margin: 20px 0 0 30px;background: url("../images/logo.png") no-repeat; }
     #header .h1_over {float: left;width: 235px;height: 41px;	margin: 20px 0 0 30px;background: url("../images/logo_over.png") no-repeat;}
