--- a/tourPrj/src/main/webapp/css/tour/tp/tpi/tpi.css
+++ b/tourPrj/src/main/webapp/css/tour/tp/tpi/tpi.css
@@ -30,6 +30,23 @@
 	min-width: 700px;
 }
 
+.tpiCal_pop .pop_container{
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.tpiCal_pop #tourNm{
+	margin: 0 auto;
+    padding: 10px;
+    border: none;
+    border-bottom: 1px solid;
+    margin-bottom: 10px;
+    text-align: center;
+    width: 50%;
+    min-width: 200px;
+}
+
 .flatpickr-calendar{
 	-webkit-box-shadow: none !important;
     box-shadow: none !important;
@@ -39,6 +56,38 @@
 	margin-top: 10px;
 }
 
+.tpiList{
+	display: flex;
+    flex-wrap: wrap;
+    margin-top: 10px;
+}
+
+.planDiv{
+	width: 19%;
+    min-width: 150px;
+    border: 1px solid #122a59;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    padding: 10px;
+    gap: 10px;
+    cursor: pointer;
+    margin: 5px 0.5%;
+}
+
+.planDiv:hover{
+	filter: brightness(50%);
+}
+
+.tpiList img{
+	width: 100%;
+}
+
+.planNm{
+	
+}
 
 
 
