--- a/tourPrj/src/main/webapp/css/custom.css
+++ b/tourPrj/src/main/webapp/css/custom.css
@@ -354,3 +354,43 @@ p#progDc {
 }
 /* [충전소현황 > 통계정보] 조회기간 물결표시 */
 .s04 .sch_area .sch_inner .date{padding-left:10px; padding-right:10px;}
+
+
+/* 슬라이드 쇼 관련 스타일 추가 */
+.slide-container {
+    width: 100%;
+    height: 200px;
+    margin-bottom: 20px;
+}
+
+.slideshow {
+    position: relative;
+    width: 100%;
+    height: 300px; /* 기본 높이 설정 */
+    overflow: hidden;
+    border-radius: 8px; /* 테두리를 둥글게 설정 */
+}
+
+.slides {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+    min-width: 100%;
+    box-sizing: border-box;
+    height: 100%; /* 슬라이드 높이를 부모의 100%로 설정 */
+    display: flex;
+    align-items: center; /* 슬라이드 내부 콘텐츠를 세로 중앙 정렬 */
+    justify-content: center; /* 슬라이드 내부 콘텐츠를 가로 중앙 정렬 */
+    font-size: 24px; /* 슬라이드 내부 텍스트 크기 조정 */
+    color: white; /* 슬라이드 내부 텍스트 색상 흰색 */
+}
+
+.control {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+    user-select: none; /* 텍스트 선택 불가 */
+}
