--- a/tourPrj/src/main/webapp/css/tour/tp/tpi/tpi.css
+++ b/tourPrj/src/main/webapp/css/tour/tp/tpi/tpi.css
@@ -72,7 +72,6 @@
     flex-wrap: nowrap;
     align-items: center;
     padding: 10px;
-    gap: 10px;
     cursor: pointer;
     margin: 5px 0.5%;
 }
@@ -85,14 +84,33 @@
 	width: 100%;
 }
 
-.planNm{
-	
+.planDiv .planNm{
+	font-weight: bold;
+    margin-top: 5px;
+}
+
+
+.planDiv .planDt{
+	font-size: 14px;
 }
 
 .timeline {
     border-left: 4px solid #122a59;
     padding-left: 20px;
     position: relative;
+    height: 98%;
+    overflow-y: scroll;
+    padding-right: 5px;
+}
+
+.timeline::-webkit-scrollbar {
+   width: 5px;
+   background-color: #122a5914;
+ }
+ 
+.timeline::-webkit-scrollbar-thumb {
+    background: #122a59;;
+    border-radius: 5px;
 }
 
 .tLine-svg {
@@ -142,7 +160,7 @@
 }
 
 .planMap {
-    height: 600px;
+    height: 98%;
     border: 2px solid #122a59;
     border-radius: 10px;
 }
@@ -176,7 +194,7 @@
 	}
 	
 	.timeline{
-		width: 350px;
+		width: 370px;
 	}
 }
 
@@ -312,6 +330,7 @@ input[type="date"]{
 .planner {
     display: flex;
     justify-content: space-between;
+    height: calc(100vh - 10px);
 }
 
 
